--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ charset-normalizer==2.0.7
 click==8.0.3
 ecdsa==0.17.0
 Flask==2.0.2
-Flask-Login==0.5.0
 flask-oidc==1.4.0
 flatdict==4.0.1
 frozenlist==1.2.0
@@ -18,6 +17,7 @@ Jinja2==3.0.2
 MarkupSafe==2.0.1
 multidict==5.2.0
 oauth2client==4.1.3
+passlib==1.7.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycryptodome==3.11.0
