--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,14 @@ async-timeout==4.0.0
 attrs==21.2.0
 charset-normalizer==2.0.7
 click==8.0.3
+dnspython==2.1.0
 ecdsa==0.17.0
 Flask==2.0.2
 flask-oidc==1.4.0
+Flask-PyMongo==2.3.0
 flatdict==4.0.1
 frozenlist==1.2.0
+gunicorn==20.1.0
 httplib2==0.20.2
 idna==3.3
 itsdangerous==2.0.1
